--- a/reddit-client/package.json
+++ b/reddit-client/package.json
@@ -9,6 +9,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
@@ -16,5 +17,12 @@
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@nuxt/postcss8": "^1.1.3",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.7",
+    "sass": "^1.49.9",
+    "sass-loader": "^10.2.1",
+    "tailwindcss": "^3.0.23"
+  }
 }
